--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -84,6 +84,7 @@ predicates = "2.1"
 serial_test = "0.9"
 shlex = "1.1"
 tempdir = "0.3"
+tempfile = "3.5.0"
 pretty_assertions = "1.3"
 
 ya-manifest-test-utils = "0.1"
