--- a/core/gsb-api/Cargo.toml
+++ b/core/gsb-api/Cargo.toml
@@ -31,7 +31,7 @@ bytes = "1"
 tokio = { version = "1", features=["macros"] }
 
 [dev-dependencies]
-ya-core-model = { version = "0.8", features = ["gftp"] }
+ya-core-model = { version = "^0.9", features = ["gftp"] }
 
 actix-test = "0.1"
 awc = "3"
