--- a/Cargo.toml
+++ b/Cargo.toml
@@ -259,8 +259,13 @@ ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev =
 #ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "2a6350f62cf8d926721225a3451822731456e3fe" }
 
 ## RELAY and networking stack
-ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "c92a75b0cf062fcc9dbb3ea2a034d913e5fad8e5" }
-ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "c92a75b0cf062fcc9dbb3ea2a034d913e5fad8e5" }
+#ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "ce3b6a5a2661c124bf36ca65e239a3d75f7ee79c" }
+#ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "ce3b6a5a2661c124bf36ca65e239a3d75f7ee79c" }
+ya-relay-stack = { path = "../ya-relay/crates/stack" }
+ya-relay-client = { path = "../ya-relay/client" }
+ya-relay-core = { path = "../ya-relay/crates/core" }
+ya-relay-proto = { path = "../ya-relay/crates/proto" }
+
 
 ## OTHERS
 gftp = { path = "core/gftp" }
