--- a/Cargo.toml
+++ b/Cargo.toml
@@ -259,12 +259,16 @@ ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev =
 #ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "2a6350f62cf8d926721225a3451822731456e3fe" }
 
 ## RELAY and networking stack
-#ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "ce3b6a5a2661c124bf36ca65e239a3d75f7ee79c" }
-#ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "ce3b6a5a2661c124bf36ca65e239a3d75f7ee79c" }
-ya-relay-stack = { path = "../ya-relay/crates/stack" }
-ya-relay-client = { path = "../ya-relay/client" }
-ya-relay-core = { path = "../ya-relay/crates/core" }
-ya-relay-proto = { path = "../ya-relay/crates/proto" }
+ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "29c860046ecc4419f0ed068da909adbd959a37ed" }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "29c860046ecc4419f0ed068da909adbd959a37ed" }
+# TODO: We shouldn't reference `ya-relay-core` and `ya-relay-proto` directly
+ya-relay-core = { git = "https://github.com/golemfactory/ya-relay.git", rev = "29c860046ecc4419f0ed068da909adbd959a37ed" }
+ya-relay-proto = { git = "https://github.com/golemfactory/ya-relay.git", rev = "29c860046ecc4419f0ed068da909adbd959a37ed" }
+
+#ya-relay-stack = { path = "../ya-relay/crates/stack" }
+#ya-relay-client = { path = "../ya-relay/client" }
+#ya-relay-core = { path = "../ya-relay/crates/core" }
+#ya-relay-proto = { path = "../ya-relay/crates/proto" }
 
 
 ## OTHERS
