wget style progress reporting in example

--- a/utils/transfer/Cargo.toml
+++ b/utils/transfer/Cargo.toml
@@ -47,6 +47,7 @@ branch = "feature/tokio-1"
 [dev-dependencies]
 actix-web = "4"
 anyhow = "1.0"
+crossterm = "0.26.1"
 env_logger = "0.7"
 sha2 = "0.8.1"
 structopt = "0.3.15"
