--- a/Cargo.toml
+++ b/Cargo.toml
@@ -259,11 +259,11 @@ ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev =
 #ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "2a6350f62cf8d926721225a3451822731456e3fe" }
 
 ## RELAY and networking stack
-ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "29c860046ecc4419f0ed068da909adbd959a37ed" }
-ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "29c860046ecc4419f0ed068da909adbd959a37ed" }
-# TODO: We shouldn't reference `ya-relay-core` and `ya-relay-proto` directly
-ya-relay-core = { git = "https://github.com/golemfactory/ya-relay.git", rev = "29c860046ecc4419f0ed068da909adbd959a37ed" }
-ya-relay-proto = { git = "https://github.com/golemfactory/ya-relay.git", rev = "29c860046ecc4419f0ed068da909adbd959a37ed" }
+ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "7d54d9b3421b6a2ed54d623210efb9e477920cdd" }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "7d54d9b3421b6a2ed54d623210efb9e477920cdd" }
+## TODO: We shouldn't reference `ya-relay-core` and `ya-relay-proto` directly
+ya-relay-core = { git = "https://github.com/golemfactory/ya-relay.git", rev = "7d54d9b3421b6a2ed54d623210efb9e477920cdd" }
+ya-relay-proto = { git = "https://github.com/golemfactory/ya-relay.git", rev = "7d54d9b3421b6a2ed54d623210efb9e477920cdd" }
 
 #ya-relay-stack = { path = "../ya-relay/crates/stack" }
 #ya-relay-client = { path = "../ya-relay/client" }
