--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -21,9 +21,9 @@ python = "^3.8.0"
 pytest = "^6.2"
 pytest-asyncio = "^0.20.2"
 pytest-rerunfailures = "^10.3"
-#goth = "^0.11"
+goth = "^0.15.0"
 # to use development goth version uncomment below
-goth =  { git = "https://github.com/golemfactory/goth.git", rev = "d2951a62e2a7cf0712f7f4a66c4a080777841611" }
+# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "d2951a62e2a7cf0712f7f4a66c4a080777841611" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
