--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -24,7 +24,7 @@ pytest-rerunfailures = "^10.3"
 pytest-split = "^0.8.1"
 goth = "^0.15.0"
 # to use development goth version uncomment below
-# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "d2951a62e2a7cf0712f7f4a66c4a080777841611" }
+goth =  { git = "https://github.com/golemfactory/goth.git", rev = "b3a08bb281b38c64224e69cefd9d822cce0770da" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
