--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -21,10 +21,10 @@ python = "^3.8.0"
 pytest = "^6.2"
 pytest-asyncio = "^0.20.2"
 pytest-rerunfailures = "^10.3"
-# goth = "^0.15.0"
 pytest-split = "^0.8.1"
+goth = "^0.15.0"
 # to use development goth version uncomment below
-goth =  { git = "https://github.com/golemfactory/goth.git", rev = "55a87a7c44b6d6af3c3856243169d301b00d7f56" }
+# goth =  { git = "https://github.com/golemfactory/goth.git", rev =gi "d2951a62e2a7cf0712f7f4a66c4a080777841611" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
