--- a/core/identity/Cargo.toml
+++ b/core/identity/Cargo.toml
@@ -24,7 +24,7 @@ diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
 diesel_migrations = "1.4"
 digest = "0.10.7"
 eth-keystore = "0.5.0"
-ethsign = "0.8"
+ethsign = { version = "0.10", features = ["export-private-key"] }
 hex = "0.4"
 hmac = "0.12.1"
 futures = "0.3"
@@ -35,7 +35,7 @@ r2d2 = "0.8.8"
 rand = "0.8"
 rpassword = "3.0.2"
 serde_json = "1.0"
-scrypt = "0.10"
+scrypt = "0.11.0"
 sha2 = "0.10.6"
 sha3 = "0.10.8"
 structopt = "0.3"
