--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -18,8 +18,8 @@ packet-trace-enable = [
 ya-client-model = "0.5"
 ya-core-model = { version = "^0.9", features=["net", "identity"] }
 
-ya-relay-client = "0.6"
-#ya-relay-client = { path = "../../../ya-relay/client" }
+# ya-relay-client = "0.6"
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay", rev = "f7eaae8212180b03b61fe0268ef32c153418fb0f" }
 
 ya-sb-proto = { version = "0.6.1" }
 ya-sb-util = { version = "0.4.1" }
