Sqlite sys force update

--- a/core/persistence/Cargo.toml
+++ b/core/persistence/Cargo.toml
@@ -20,7 +20,7 @@ bigdecimal = "0.2"
 chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
 dotenv = "0.15.0"
-libsqlite3-sys = { version = ">0.9.1", features = ["bundled"] }
+libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
 log = "0.4"
 r2d2 = "0.8"
 serde_json = "1.0"
