--- a/core/payment-driver/erc20next/Cargo.toml
+++ b/core/payment-driver/erc20next/Cargo.toml
@@ -31,6 +31,7 @@ sha3 = "0.8"
 thiserror = "1.0"
 tiny-keccak = { version = "2.0", features = ["keccak"] }
 tokio = { version = "1", features = ["full"] }
+tokio-util = { version = "0.7.8", features = ["rt"] }
 uuid = { version = "0.8", features = ["v4"] }
 web3 = { version = "0.19.0", default-features = false, features = [
     "http-tls",
